# git2svn

./: .gitignore  Makefile  Pipfile  README.md  git2svn.py  mypy.ini  pyproject.toml  requirements.txt
git2svn/: git2svn.py
